# app-blocker

./: .gitignore  BEFORE_AFTER.md  IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  README.md  app.bat  autostart.py  build.py  common.py  config.default.json  config_manager.py  demo_single_instance.py  gui.py  gui_dialogs.py  gui_log_viewer.py  launcher_gui.py  launcher_main.py  logger_utils.py  main.py  make.bat  notification_manager.py  pyproject.toml  setup_installer.py  single_instance.py  state_manager.py  system_tray.py  test_distribution.py  test_minimized_startup.py  test_monitoring_persistence.py  versioning.py
app/: __init__.py  autostart.py  common.py  config_manager.py  dialog_base.py  gui.py  gui_dialogs.py  gui_log_viewer.py  logger_utils.py  main.py  notification_manager.py  security_manager.py  system_tray.py  time_utils.py  versioning.py
build_tools/: app.bat  build.py  make.bat  setup_installer.py  test_distribution.py
docs/: SINGLE_INSTANCE.md
tests/: __init__.py  test_app_blocker.py  test_autostart.py  test_blocked_hours.py  test_config_reload.py  test_environment_mode.py  test_heartbeat_watchdog.py  test_isolated_config.py  test_logger_utils.py  test_minimized_startup.py  test_monitoring_persistence.py  test_notification_manager.py  test_security_manager.py  test_single_instance.py  test_state_manager.py  test_system_tray.py  test_utils.py  test_with_utils.py
