[tool.poetry]
name = "app-blocker"
version = "1.1.8"
description = "Application for monitoring and limiting time spent on specific programs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
psutil = ">=5.9.0"
pystray = "^0.19.5"
pillow = "^11.3.0"
pywin32 = "^311"
cryptography = ">=42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=24.3.0"
flake8 = ">=6.0.0"
pyinstaller = ">=6.14.2"
pytest-cov = ">=6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "isolated: marks tests that use isolated configuration",
]
